--- a/tests/odh/resources/mnist_hpo_raytune.ipynb
+++ b/tests/odh/resources/mnist_hpo_raytune.ipynb
@@ -164,13 +164,15 @@
     "header = {\"Authorization\": f\"Bearer {kubernetes_user_bearer_token}\"}\n",
     "client = RayJobClient(address=ray_dashboard, headers=header, verify=False)\n",
     "\n",
+    "use_cuda = num_gpus > 0\n",
+    "cuda_arg = \"--cuda\" if use_cuda else \"\"\n",
+    "entrypoint_command = f\"python mnist_hpo.py {cuda_arg}\".strip()\n",
     "submission_id = client.submit_job(\n",
-    "    entrypoint=\"python mnist_hpo.py\",\n",
+    "    entrypoint=entrypoint_command,\n",
     "    runtime_env={\n",
     "        \"working_dir\": \"/opt/app-root/notebooks/..data\",\n",
     "        \"pip\": \"/opt/app-root/notebooks/hpo_raytune_requirements.txt\",\n",
     "    },\n",
-    "    entrypoint_num_gpus=num_gpus\n",
     ")"
    ]
   },
